--- a/src/AuctionService/appsettings.Development.json
+++ b/src/AuctionService/appsettings.Development.json
@@ -6,7 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;Database=carsAuctions"
+    "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;Database=carsauction"
   },
-  "IdentityServiceUrl": "http://localhost:5000"
+  "IdentityServiceUrl": "http://localhost:5000",
+  "RabbitMq": {
+    "Host": "localhost"
+  }
 }
