--- a/src/GatewayService/appsettings.Docker.json
+++ b/src/GatewayService/appsettings.Docker.json
@@ -5,20 +5,20 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
-  "IdentityServiceUrl": "http://localhost:5000",
+  "IdentityServiceUrl": "http://identity-svc-carsauction",
   "ReverseProxy": {
     "Clusters": {
       "auctions": {
         "Destinations": {
           "auctionApi": {
-            "Address": "http://localhost:7001"
+            "Address": "http://auction-svc-carsauction"
           }
         }
       },
       "search": {
         "Destinations": {
           "searchApi": {
-            "Address": "http://localhost:7002"
+            "Address": "http://search-svc-carsauction"
           }
         }
       }
