End of session 11-1

--- a/src/GatewayService/appsettings.Docker.json
+++ b/src/GatewayService/appsettings.Docker.json
@@ -21,6 +21,13 @@
             "Address": "http://search-svc-carsauction"
           }
         }
+      },
+      "bids": {
+        "Destinations": {
+          "bidApi": {
+            "Address": "http://bid-svc-carsauction"
+          }
+        }
       }
     }
   }
