--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,9 +82,9 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
+      - ClientApp=http://app.carsforauction.com
       - ConnectionStrings__DefaultConnection=Server=postgres-carsauction:5432;User Id=postgres;Password=postgrespw;Database=identity
-    ports:
-      - 80:80
+      - VIRTUAL_HOST=id.carsforauction.com
     depends_on:
       - postgres-carsauction
     networks:
@@ -98,8 +98,8 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
-    ports:
-      - 6001:80
+      - ClientApp=https://app.carsforauction.com
+      - VIRTUAL_HOST=api.carsforauction.com
     networks:
       custom:
   bid-svc-carsauction:
@@ -143,19 +143,28 @@ services:
       dockerfile: frontend/web-app/Dockerfile
     volumes:
       - /var/lib/web/data
-    ports:
-      - 3000:3000
     extra_hosts:
-      - id.carsForauction.com:10.5.0.200
+      - id.carsforauction.com:10.5.0.200
     environment:
       - NEXTAUTH_SECRET=somereallyreallyniceone
-      - NEXTAUTH_URL=http://localhost:3000
+      - NEXTAUTH_URL=https://app.carsforauction.com
       - NEXTAUTH_URL_INTERNAL=http://web-app:3000
       - API_URL=http://gateway-svc-carsauction/
-      - ID_URL=http://id.carsForauction.com
+      - ID_URL=http://id.carsforauction.com
       - NEXT_PUBLIC_NOTIFY_URL=http://gateway-svc-carsauction/notifications
+      - VIRTUAL_HOST=app.carsforauction.com
+      - VIRTUAL_PORT=3000
     networks:
       custom:
- 
+  nginx-proxy:
+    image: nginxproxy/nginx-proxy
+    ports:
+      - 80:80
+      - 443:443
+    networks:
+      custom:
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./devcerts:/etc/nginx/certs
       
   
