--- a/infra/K8S/notify-depl.yml
+++ b/infra/K8S/notify-depl.yml
@@ -14,14 +14,20 @@ spec:
       containers:
       - name: notify-svc-carsauction
         image: 171717/notify-svc-carsauction
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         env:
           - name: RabbitMq__Host
             value: rabbit-clusterip
           - name: RabbitMq__Username
-            value: rabbit
+            valueFrom:
+              secretKeyRef:
+                name: notify-secret
+                key: rabbitUn
           - name: RabbitMq__Password
-            value: rabbit
+            valueFrom:
+              secretKeyRef:
+                name: notify-secret
+                key: rabbitPw
 ---
 apiVersion: v1
 kind: Service
