--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -8,7 +8,7 @@ on:
       - 'frontend/web-app/**'
 
 env:
-  REGISTRY_IMAGE: 171717/web-app-carsauction
+  REGISTRY_IMAGE: 171717/web-app
   DOCKERFILE: frontend/web-app/Dockerfile
   DEPLOYMENT_NAME: webapp
 
